# tauri-plugin-udp

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  tsconfig.json
.github/: FUNDING.yml
examples/tauri-app/: package.json
examples/tauri-app-svelte/: package.json
examples/tauri-app-svelte/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app-svelte/src-tauri/capabilities/: default.json
examples/tauri-app-svelte/src-tauri/src/: lib.rs
examples/tauri-app-svelte/src/routes/: +page.svelte
examples/tauri-app-vue/: vite.config.ts
examples/tauri-app-vue/src/: App.vue
examples/tauri-app-vue/src-tauri/: .gitignore
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: bind.toml  unbind.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  models.rs
webview-src/: event.d.ts  index.ts
