[package]
name = "tauri-plugin-udp"
version = "0.1.1"
authors = [ "kuyoonjo" ]
description = "UDP Socket for Tauri App"
edition = "2021"
license = "MIT"
repository = "https://github.com/kuyoonjo/tauri-plugin-udp"
keywords = ["tauri", "plugin", "udp"]
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
readme = "README.md"
links = "tauri-plugin-udp"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }

[dependencies]
tauri = { version = "2.0.4" }
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.37.0", features = [] }
lazy_static = "1.4.0"
debug_print = "1.0.0"
